--- a/Landing Pages/brands.html
+++ b/Landing Pages/brands.html
@@ -1,23 +1,38 @@
 <head>
+
 <link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
+<script src="/assets/js/jquery-scrolltofixed-min.js"></script>
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
 <style type="text/css">
 
+
 .tfFourPanels img{
-  width: 70%;
-  vertical-align: : bottom;
+  width: 125px;
 }
 
-.tfPanelsContainer {
-  vertical-align: bottom;
+.tfFourPanels p{
+  padding-left: 2.5%;
+  width: 95%;
 }
 
-.tfFourPanels {
-  vertical-align: bottom;
+.tfFourPanels h3{
+  padding-left: 2.5%;
+  width: 95%;
 }
+
+.tfFourPanels h4{
+  padding-left: 2.5%;
+  width: 95%;
+  font-family: 'Roboto Condensed', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 300;
+  letter-spacing: .03em;
+}
+
+
+
 
 </style>
 
@@ -26,12 +41,19 @@
 <body>
 <div class="tfBodyText">
 
+
 <!-- Sidebar -->
-  <nav class="sidebar">
+  <nav class="sidebar" style="position:relative;">
     <h5>About Us</h5>
     <ul>
       <a href="/who"><li>Our Company</li></a>
-      <a style="color: #B0BC22;" href="/about-brands"><li style="font-size: 1em; font-weight: 500; letter-spacing: .05em">Our Brands</li></a>
+      <a href="/about-brands"><li class="expandingNav">Our Brands</a>
+        <ul style="margin-left:15px;">
+          <a href="/about-brands-viski"><li>Viski</li></a>
+          <a href="/about-brands-viski"><li>True</li></a>
+          <a href="/about-brands-viski"><li>Host</li></a>
+        </ul>
+      </li>
       <a href="/guarantee"><li>Our Guarantees</li></a>   
     </ul>
     <h5>Help & Info</h5>
@@ -43,24 +65,55 @@
   </nav>
 <!-- End Sidebar -->
 
-<section id="brands">
-
-
+<section id="guarantee">
+<h3>Our Guarantees</h3>
+<p>Helvetica heirloom shabby chic, High Life flannel Williamsburg paleo twee freegan normcore sartorial chillwave. Kale chips you probably haven't heard of them Tumblr disrupt, distillery master cleanse umami Brooklyn kitsch actually direct trade selvage banjo heirloom vinyl.</p>
 <div class="tfPanelsContainer">
   <div class="tfFourPanels">
-    <a href="/about-brands-true"><img src="/assets/images/content/CD_pages/true_brandlogo_true.png"  style="width: 60%;"/></a>
+    <img src="/assets/images/content/CD_pages/true_guarantees_bestprice-01.png" />
+    <h4>Best Price</h4>
+    <p>Go Ahead, shop around! If you find a better price, we'll match it.</p>
   </div>
   <div class="tfFourPanels">
-    <a href="/about-brands-host"><img src="/assets/images/content/CD_pages/true_brandlogo_host.png" /></a>
+    <img src="/assets/images/content/CD_pages/true_guarantees_satisfaction-01.png" />
+    <h4>100% Satisfaction</h4>
+    <p>Not satisfied? We offer returns or exchanges for ANY reason.</p>
   </div>
   <div class="tfFourPanels">
-    <a href="/about-brands-twine"><img src="/assets/images/content/CD_pages/true_brandlogo_twine.png" /></a>
+    <img src="/assets/images/content/CD_pages/true_guarantees_fastship-01.png" />
+    <h4>Same Day Shipping</h4>
+    <p>All orders placed before 3:30 PM (PST) will ship out the same day!</p>
   </div>
   <div class="tfFourPanels">
-    <a href="/about-brands-viski"><img src="/assets/images/content/CD_pages/true_brandlogo_viski.png" style="width: 40%;"/></a>
+    <img src="/assets/images/content/CD_pages/true_guarantees_nominimums-01.png" />
+    <h4>No Minimums</h4>
+    <p>So you have the flexibility to try out our newest products.</p>
   </div>
   <span class="stretch"></span>
 </div>
 </section>
 </div>
+<div class="bodyEnd">&nbsp;</div>
+<!-- End Body Section -->
+<script>
+var $ = jQuery;
+
+var tfMain = function() {
+
+
+  $('.sidebar').scrollToFixed({
+    limit: $('.bodyEnd').offset().top,
+    minWidth: 760
+  });
+
+
+};
+
+$('.expandingNav').click(function(){
+  $(this).children('.tfHidden').slideDown();
+  });
+
+$(document).ready(tfMain);
+
+</script>
 </body>
