--- a/Landing Pages/faq.html
+++ b/Landing Pages/faq.html
@@ -15,10 +15,11 @@
 <body>
 <div class="tfBodyText">
 <!-- Sidebar -->
+<div class="sidebarContainer">
   <nav class="sidebar" style="position:relative;">
     <h5>About Us</h5>
     <ul>
-      <a href="/who"><li>Our Company</li></a>
+      <a href="/about"><li>Our Company</li></a>
       <a href="/about-brands"><li class="expandingNav">Our Brands</a>
         <ul class="tfHidden" style="margin-left:15px;">
           <a href="/about-brands-viski"><li>Viski</li></a>
@@ -33,9 +34,12 @@
       <a href="/faq"><li>FAQ</li></a>
       <a href="/shipping"><li>Shipping & Deliveries</li></a>
       <a href="/returns"><li>Returns & Exchanges</li></a>
+      <a href="/contact"><li>Contact</li></a>
     </ul>
   </nav>
+</div>
 <!-- End Sidebar -->
+
   <section id="faq">
 
   <h2 style="margin-bottom: 0px;">Frequently Asked Questions</h2>
