--- a/Landing Pages/guarantee.html
+++ b/Landing Pages/guarantee.html
@@ -43,10 +43,11 @@
 
 
 <!-- Sidebar -->
+<div class="sidebarContainer">
   <nav class="sidebar" style="position:relative;">
     <h5>About Us</h5>
     <ul>
-      <a href="/who"><li>Our Company</li></a>
+      <a href="/about"><li>Our Company</li></a>
       <a href="/about-brands"><li class="expandingNav">Our Brands</a>
         <ul class="tfHidden" style="margin-left:15px;">
           <a href="/about-brands-viski"><li>Viski</li></a>
@@ -61,13 +62,15 @@
       <a href="/faq"><li>FAQ</li></a>
       <a href="/shipping"><li>Shipping & Deliveries</li></a>
       <a href="/returns"><li>Returns & Exchanges</li></a>
+      <a href="/contact"><li>Contact</li></a>
     </ul>
   </nav>
+</div>
 <!-- End Sidebar -->
 
-<section id="guarantee">
+<section id="guarantee" style="width: 80%;">
 <h3>Our Guarantees</h3>
-<p>Helvetica heirloom shabby chic, High Life flannel Williamsburg paleo twee freegan normcore sartorial chillwave. Kale chips you probably haven't heard of them Tumblr disrupt, distillery master cleanse umami Brooklyn kitsch actually direct trade selvage banjo heirloom vinyl.</p>
+<p>We go to great lengths to ensure that ordering from True Fabrications is as fast, easy and carefree as possible. Not only do our guarantees set the industry standard, our customer service is unmatched. In short, your satisfaction is our absolute highest priority - because after all, without our customers we wouldn’t be where we are today.</p>
 <div class="tfPanelsContainer">
   <div class="tfFourPanels">
     <img src="/assets/images/content/CD_pages/true_guarantees_bestprice-01.png" />
@@ -92,9 +95,10 @@
   <span class="stretch"></span>
 </div>
 </section>
-</div>
+
 <div class="bodyEnd">&nbsp;</div>
 <!-- End Body Section -->
+</div>
 <script>
 var $ = jQuery;
 
