--- a/Landing Pages/returns.html
+++ b/Landing Pages/returns.html
@@ -16,15 +16,17 @@
 <body>
 <div class="tfBodyText">
 <!-- Sidebar -->
+<div class="sidebarContainer">
   <nav class="sidebar" style="position:relative;">
     <h5>About Us</h5>
     <ul>
-      <a href="/who"><li>Our Company</li></a>
+      <a href="/about"><li>Our Company</li></a>
       <a href="/about-brands"><li class="expandingNav">Our Brands</a>
         <ul class="tfHidden" style="margin-left:15px;">
           <a href="/about-brands-viski"><li>Viski</li></a>
           <a href="/about-brands-viski"><li>True</li></a>
           <a href="/about-brands-viski"><li>Host</li></a>
+          <a href="/about-brands-twine"><li>Twine</li></a>
         </ul>
       </li>
       <a href="/guarantee"><li>Our Guarantees</li></a>   
@@ -34,8 +36,10 @@
       <a href="/faq"><li>FAQ</li></a>
       <a href="/shipping"><li>Shipping & Deliveries</li></a>
       <a href="/returns"><li>Returns & Exchanges</li></a>
+      <a href="/contact"><li>Contact</li></a>
     </ul>
   </nav>
+</div>
 <!-- End Sidebar -->
   <section id="returns">
 
