--- a/Landing Pages/who.html
+++ b/Landing Pages/who.html
@@ -10,6 +10,7 @@
 <body>
 <div class="tfBodyText">
 <!-- Sidebar -->
+<div class="sidebarContainer">
   <nav class="sidebar" style="position:relative;">
     <h5>About Us</h5>
     <ul>
@@ -28,8 +29,10 @@
       <a href="/faq"><li>FAQ</li></a>
       <a href="/shipping"><li>Shipping & Deliveries</li></a>
       <a href="/returns"><li>Returns & Exchanges</li></a>
+      <a href="/contact"><li>Contact</li></a>
     </ul>
   </nav>
+</div>
 <!-- End Sidebar -->
 
 <section id="who">
